--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "expo": "~54.0.33",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
@@ -20,6 +21,7 @@
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
