--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "babel-preset-expo": "^54.0.10",
     "clsx": "^2.1.1",
     "expo": "~54.0.33",
     "expo-image": "~3.0.11",
