--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-worklets-core": "^1.6.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.17"
   },
