--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-worklets": "^0.7.2",
     "react-native-worklets-core": "^1.6.2",
     "tailwind-merge": "^3.4.0",
