--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "babel-preset-expo": "^54.0.10",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "expo": "~54.0.33",
     "expo-crypto": "~15.0.8",
+    "expo-file-system": "~19.0.21",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.23",
+    "expo-secure-store": "~15.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.1.23",
@@ -29,6 +32,7 @@
     "react-native-worklets-core": "^1.6.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.17",
+    "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
