--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.72.1",
     "babel-preset-expo": "^54.0.10",
     "buffer": "^6.0.3",
     "clsx": "^2.1.1",
@@ -33,6 +34,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.17",
     "zod": "^4.3.6",
+    "zod-to-json-schema": "^3.25.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
